[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
  "setuptools_scm[toml] >= 6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "juniplot"
description = "Make some plots from junifer output for initial inspection."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {email = "l.sasse@fz-juelich.de"},
    {name = "Leonard Sasse"},
]

keywords = ["junifer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = ["joblib", "junifer", "seaborn", "nilearn", "numpy"]

dynamic = ["version"]

[project.urls]
repository = "https://github.com/LeSasse/juniplot"

[project.scripts]
juniplot = "juniplot.main:main"

#[project.optional-dependencies]
#dev = ["tox"]

################
# Tool configs #
################

[tool.setuptools]
packages = ["juniplot"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
write_to = "juniplot/_version.py"

[tool.black]
line-length = 79
target-version = ["py37"]